--- a/client_s/public/index.html
+++ b/client_s/public/index.html
@@ -9,7 +9,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
@@ -24,6 +23,11 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="icon"
+      href="https://cdn-icons-png.flaticon.com/512/2775/2775994.png"
+      type="image/x-icon"
     />
     <title>Real Time Geotagging-App</title>
   </head>
